--- a/week-2/day-2&3-redux-project/package.json
+++ b/week-2/day-2&3-redux-project/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-modal": "^3.16.3",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
