hono app with postgres dbs and write some query

--- a/week-3/day-5-6/hono-app/wrangler.toml
+++ b/week-3/day-5-6/hono-app/wrangler.toml
@@ -26,3 +26,5 @@ compatibility_date = "2025-01-15"
 # [observability]
 # enabled = true
 # head_sampling_rate = 1
+
+compatibility_flags = ["nodejs_compat"]
