--- a/week-3/day-5-6/hono-app/package.json
+++ b/week-3/day-5-6/hono-app/package.json
@@ -5,10 +5,12 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.16"
+    "hono": "^4.6.16",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
+    "@types/node": "^22.10.7",
     "wrangler": "^3.101.0"
   }
 }
