--- a/week-5/project/frontend/package.json
+++ b/week-5/project/frontend/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "cra-template": "1.2.0",
+    "medium-common-zod-1": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.4",
