--- a/week-5/project/frontend/package.json
+++ b/week-5/project/frontend/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
-    "typescript": "^5.7.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -44,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.0.1",
+    "typescript": "^4.9.5"
   }
 }
