--- a/week-6/day-3/package.json
+++ b/week-6/day-3/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "prettier": "^3.5.0",
+    "tailwindcss": "^3.4.17",
     "turbo": "^2.4.2",
     "typescript": "5.7.3"
   },
