--- a/week-6/day-3/apps/user-app/package.json
+++ b/week-6/day-3/apps/user-app/package.json
@@ -15,7 +15,8 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@repo/db":"*"
+    "@repo/db":"*",
+    "@repo/store":"*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
