--- a/week-6/day-3/package.json
+++ b/week-6/day-3/package.json
@@ -28,6 +28,10 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2"
+    "next": "^15.1.7",
+    "postcss": "^8.5.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recoil": "^0.7.7"
   }
 }
